# wlr-protocols-meson-wrap

./: .travis.yml  README.md  wlr-protocols.wrap.template
wlr-protocols/: meson.build
